files/storm-network.yml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: block-icmp
spec:
  order: 0
  selector: "all()"
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
    protocol: ICMP
  - action: Deny
    protocol: ICMPv6
  egress:
  - action: Deny
    protocol: ICMP
  - action: Deny
    protocol: ICMPv6
...
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: block-80
spec:
  selector: "all()"
  order: 0
  ingress:
  - action: Deny
    protocol: TCP
    destination:
      ports:
        - 80
  egress:
  - action: Deny
    protocol: TCP
    destination:
      ports:
        - 80
...
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: block-8080
spec:
  selector: "all()"
  order: 0
  ingress:
  - action: Deny
    protocol: TCP
    destination:
      ports:
        - 8080
  egress:
  - action: Deny
    protocol: TCP
    destination:
      ports:
        - 8080
...
